# sqlctx

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: test.yml
src/: db_utils.py
src/sqlctx/: cli_commands.py  db_utils.py  main.py  mcp_server.py
tests/: test_cli.py
