[project]
name = "sqlctx"
version = "0.1.7"
description = "A tool for generating LLM context from database tables"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "duckdb",
    "pandas",
    "pyyaml",
    "psycopg2-binary",
    "mysql-connector-python",
    "fastmcp",
    "uvicorn",
    "toml>=0.10.2",
    "click>=8.1.8",
    "ruamel-yaml>=0.18.6",
    "pytest>=8.3.4",
    "pyfakefs>=5.7.3",
]

[project.scripts]
sqlctx = "sqlctx.cli_commands:cli"
